glx/testdata/invalid/comprehensive-broken-references/vocabularies/participant-roles.glx
participant_roles:
  subject:
    label: "Subject"

